BUG : Loading library sometimes not in the right order APP : Increase button height (better on mobile devices)

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -57,7 +57,7 @@ button {
   border-left: 3px solid #00aeef;
   border-right: 3px solid #00aeef;
   text-align: center;
-  height: 31px;
+  height: 38px;
   line-height: 22px;
   font-size: 11px;
   cursor: pointer;
